--- a/src/Components/Aboutus.css
+++ b/src/Components/Aboutus.css
@@ -12,6 +12,9 @@
     width: 55%;
     border: 5px solid black;
     border-radius: 60px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
 }
 .image{
     width: 40%;
@@ -32,6 +35,7 @@
 }
 .Youtube{
     margin-top: -40px;
+    color: red;
 }
 .btn2{
     width:20%;
@@ -47,4 +51,39 @@
 .content a {
     text-decoration: none;
     color: white;
+}
+
+@media screen and (max-width: 831px){
+    .aboutcontent{
+        flex-direction: column;
+        position: relative;
+        justify-content: center;
+        align-items: center;
+    }
+    .aboutcontent img{
+        width: 70%;
+        height: 45vh;
+        align-items: center;
+        justify-content: center;
+    }
+    .content{
+         width: 100%;
+    }
+    .content p{
+        text-align: center;
+    }
+    .btn2{
+        margin: auto;
+        width: 30%;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+    .Youtube{
+        margin-top: 20px;
+    }
+    .image{
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
 }
